# royal_game_of_ur

./: .pre-commit-config.yaml  README.md  pyproject.toml  ur.py
ur/: engine.py  game.py  interactive.py  play_learn.py  play_learn2.py  play_learn3.py  play_learn4.py  play_many.py  play_one.py  policies.py  utils.py
