[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
description = "Royal Game of Ur"
name = "ur"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "numpy",
    "pandas",
    "torch",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["ur"]

[project.optional-dependencies]
dev = [
  "codespell",
  "coverage",
  "pre-commit",
  "pytest",
  "ruff>=0.5.3"
]

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.uv]
package = true
