[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{name = "Vincent QB", email = "vincentqb@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "loguru",
  "numpy",
  "readchar",
  "rich",
  "torch>=2.9"
]
description = "Royal Game of Ur"
name = "ur"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.coverage.report]
fail_under = 80
show_missing = false

[tool.coverage.run]
source = ["."]

[tool.hatch.build.targets.wheel]
packages = ["ur"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.uv]
package = true
